--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -2,7 +2,7 @@ logging.config: "classpath:logback-local.xml"
 
 spring:
   profiles:
-    active: test
+    active: test,testdatareset
   flyway:
     enabled: true
   datasource:
