--- a/nais/topics/vedtak-arkivering-topic.yaml
+++ b/nais/topics/vedtak-arkivering-topic.yaml
@@ -24,3 +24,6 @@ spec:
     - team: flex
       application: spinnsyn-arkivering
       access: read
+    - team: flex
+      application: flexmember
+      access: read
