--- a/naiserator-prod.yaml
+++ b/naiserator-prod.yaml
@@ -56,6 +56,7 @@ spec:
         - application: flex-gateway
         - application: flex-intern-gateway
         - application: spinnsyn-frontend-arkivering
+        - application: spinnsyn-arkivering
         - application: spinnsyn-frontend-interne
         - application: spinnsyn-frontend
         - application: syfomodiaperson
