--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,6 +15,7 @@ spring:
       minimum-idle: 1
       maximum-pool-size: 5
       connection-timeout: 60000
+      idle-timeout: 300000
       max-lifetime: 600000
 
 on-prem-kafka:
