--- a/naiserator-prod.yaml
+++ b/naiserator-prod.yaml
@@ -44,6 +44,8 @@ spec:
         diskAutoresize: true
         databases:
           - name: spinnsyn-db
+            users:
+              - name: bigquery-dataprodukt
   accessPolicy:
     outbound:
       external:
