--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -57,4 +57,5 @@ KAFKA_KEYSTORE_PATH: /
 
 
 SPINNSYN_FRONTEND_CLIENT_ID: spinnsyn-frontend
-SPINNSYN_FRONTEND_TOKENX_IDP: idporten
+DITT_SYKEFRAVAER_CLIENT_ID: ditt-sykefravaer
+TOKENX_IDP_IDPORTEN: idporten
