--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,138 +1,9 @@
-name: "Build, publish and deploy"
+name: Bygg, publish og deploy
 on: push
-env:
-  APP: spinnsyn-backend
+
 jobs:
-  build:
-    name: Checkout code and create docker tag
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup java
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - name: Checkout code
-        uses: actions/checkout@master
-      - name: Generate version and image name
-        run: |
-          TIME=$(TZ="Europe/Oslo" date +%Y.%m.%d-%H.%M)
-          COMMIT=$(git rev-parse --short=8 HEAD)
-          VERSION=$TIME-$COMMIT
-          echo "IMAGE=ghcr.io/navikt/${GITHUB_REPOSITORY}/$APP:$VERSION" >> $GITHUB_ENV
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
-          echo $VERSION > VERSION.txt
-      - name: Store VERSION for subsequent jobs
-        uses: actions/upload-artifact@v3
-        with:
-          name: VERSION.txt
-          path: VERSION.txt
-      - name: Gradle wrapper validation
-        uses: gradle/wrapper-validation-action@v1
-      - uses: actions/cache@v3
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-cache-${{ hashFiles('build.gradle.kts') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-cache-
-      - uses: actions/cache@v3
-        with:
-          path: ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-wrapper-
-      - name: Lint koden
-        env:
-          ORG_GRADLE_PROJECT_githubUser: x-access-token
-          ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          ./gradlew ktlintCheck
-      - name: Run tests
-        env:
-          ORG_GRADLE_PROJECT_githubUser: x-access-token
-          ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          ./gradlew test
-      - name: Build jar
-        env:
-          ORG_GRADLE_PROJECT_githubUser: x-access-token
-          ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          ./gradlew bootJar -x test
-      - name: Build and publish Docker image
-        if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/dev-')
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          docker build --tag ${IMAGE} .
-          docker login ghcr.io -u ${GITHUB_REPOSITORY} -p ${GITHUB_TOKEN}
-          docker push ${IMAGE}
-
-  deploy-to-dev:
-    if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/dev-')
-    name: Deploy to dev-gcp
-    runs-on: ubuntu-latest
-    needs: build
-    concurrency: deploy-to-dev
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@master
-      - name: Download VERSION-artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: VERSION.txt
-          path: .
-      - run: echo "VERSION=`cat VERSION.txt`" >> $GITHUB_ENV
-      - run: echo "IMAGE=ghcr.io/navikt/${GITHUB_REPOSITORY}/$APP:$VERSION" >> $GITHUB_ENV
-      - name: Deploy to dev-gcp
-        uses: nais/deploy/actions/deploy@master
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: dev-gcp
-          RESOURCE: naiserator-dev.yaml
-
-  deploy-to-prod:
-    if: github.ref == 'refs/heads/master'
-    name: Deploy to prod-gcp
-    runs-on: ubuntu-latest
-    needs: build
-    concurrency: deploy-to-prod
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@master
-      - name: Download VERSION-artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: VERSION.txt
-          path: .
-      - run: echo "VERSION=`cat VERSION.txt`" >> $GITHUB_ENV
-      - run: echo "IMAGE=ghcr.io/navikt/${GITHUB_REPOSITORY}/$APP:$VERSION" >> $GITHUB_ENV
-      - name: Deploy to prod-gcp
-        uses: nais/deploy/actions/deploy@master
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: prod-gcp
-          RESOURCE: naiserator-prod.yaml
-
-  tag-image-as-latest:
-    if: github.ref == 'refs/heads/master'
-    name: Tag dockerimage as latest
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Download VERSION-artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: VERSION.txt
-          path: .
-      - run: echo "VERSION=`cat VERSION.txt`" >> $GITHUB_ENV
-      - run: echo "IMAGE=ghcr.io/navikt/${GITHUB_REPOSITORY}/$APP:$VERSION" >> $GITHUB_ENV
-      - run: echo "LATEST=ghcr.io/navikt/${GITHUB_REPOSITORY}/$APP:latest" >> $GITHUB_ENV
-      - name: Tag and push docker image
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          docker login ghcr.io -u ${GITHUB_REPOSITORY} -p ${GITHUB_TOKEN}
-          docker pull ${IMAGE}
-          docker tag ${IMAGE} ${LATEST}
-          docker push ${LATEST}
+  bygg-test-deploy:
+    uses: navikt/flex-github-actions-workflows/.github/workflows/spring-boot.yml@master
+    with:
+      app: spinnsyn-backend
+    secrets: inherit
