--- a/nais/app/naiserator.yaml
+++ b/nais/app/naiserator.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     team: flex
 spec:
-  image: {{ image }}
+  image: {{image}}
   replicas:
     min: {{replicas_min}}
     max: {{replicas_max}}
@@ -41,6 +41,7 @@ spec:
   gcp:
     sqlInstances:
       - type: POSTGRES_11
+        db_tier: {{db_tier}}
         diskAutoresize: true
         databases:
           - name: spinnsyn-db
