--- a/nais/app/naiserator.yaml
+++ b/nais/app/naiserator.yaml
@@ -41,7 +41,7 @@ spec:
   gcp:
     sqlInstances:
       - type: POSTGRES_11
-        db_tier: {{db_tier}}
+        tier: {{db_tier}}
         diskAutoresize: true
         databases:
           - name: spinnsyn-db
