Default liveness, readiness og venter på startup

--- a/nais/app/naiserator.yaml
+++ b/nais/app/naiserator.yaml
@@ -14,15 +14,11 @@ spec:
   port: 8080
   liveness:
     path: /internal/health
-    initialDelay: 10
-    timeout: 5
-    periodSeconds: 5
-    failureThreshold: 30
   readiness:
     path: /internal/health
-    initialDelay: 30
-    periodSeconds: 5
-    timeout: 5
+  startup:
+    path: /internal/health
+    initialDelay: 60
   tokenx:
     enabled: true
   kafka:
