--- a/nais/app/dev.yaml
+++ b/nais/app/dev.yaml
@@ -2,8 +2,8 @@ db_tier: db-f1-micro
 kafkaPool: nav-dev
 replicas_min: 2
 replicas_max: 2
-syfotilgangskontrollExternalHost: syfo-tilgangskontroll.dev-fss-pub.nais.io
-b2cloginExternalHost: navtestb2c.b2clogin.com
+external-host:
+  - syfo-tilgangskontroll.dev-fss-pub.nais.io
 env:
   SPRING_PROFILES_ACTIVE: default, testdata
   SYFOTILGANGSKONTROLL_URL: https://syfo-tilgangskontroll.dev-fss-pub.nais.io
