--- a/nais/app/prod.yaml
+++ b/nais/app/prod.yaml
@@ -2,6 +2,8 @@ db_tier: db-custom-1-3840
 kafkaPool: nav-prod
 replicas_min: 2
 replicas_max: 3
+cpu: 1000m
+memory: 1Gi
 external-host:
   - syfo-tilgangskontroll.prod-fss-pub.nais.io
 env:
