--- a/nais/app/prod.yaml
+++ b/nais/app/prod.yaml
@@ -4,11 +4,9 @@ replicas_min: 2
 replicas_max: 3
 cpu: 600m
 memory: 800Mi
-external-host:
-  - syfo-tilgangskontroll.prod-fss-pub.nais.io
 env:
-  SYFOTILGANGSKONTROLL_URL: https://syfo-tilgangskontroll.prod-fss-pub.nais.io
-  SYFOTILGANGSKONTROLL_AAD_CLIENT_ID: prod-fss.teamsykefravr.syfo-tilgangskontroll
+  SYFOTILGANGSKONTROLL_URL: http://syfo-tilgangskontroll.teamsykefravr
+  SYFOTILGANGSKONTROLL_AAD_CLIENT_ID: prod-gcp.teamsykefravr.syfo-tilgangskontroll
   SPINNSYN_FRONTEND_CLIENT_ID: prod-gcp:flex:spinnsyn-frontend
   DITT_SYKEFRAVAER_CLIENT_ID: prod-gcp:flex:ditt-sykefravaer
   TOKENX_IDP_IDPORTEN: https://oidc.difi.no/idporten-oidc-provider/
