--- a/nais/app/dev.yaml
+++ b/nais/app/dev.yaml
@@ -4,12 +4,10 @@ replicas_min: 2
 replicas_max: 2
 cpu: 300m
 memory: 600Mi
-external-host:
-  - syfo-tilgangskontroll.dev-fss-pub.nais.io
 env:
   SPRING_PROFILES_ACTIVE: default, testdata
-  SYFOTILGANGSKONTROLL_URL: https://syfo-tilgangskontroll.dev-fss-pub.nais.io
-  SYFOTILGANGSKONTROLL_AAD_CLIENT_ID: dev-fss.teamsykefravr.syfo-tilgangskontroll
+  SYFOTILGANGSKONTROLL_URL: http://syfo-tilgangskontroll.teamsykefravr
+  SYFOTILGANGSKONTROLL_AAD_CLIENT_ID: dev-gcp.teamsykefravr.syfo-tilgangskontroll
   SPINNSYN_FRONTEND_CLIENT_ID: dev-gcp:flex:spinnsyn-frontend
   DITT_SYKEFRAVAER_CLIENT_ID: dev-gcp:flex:ditt-sykefravaer
   TOKENX_IDP_IDPORTEN: https://oidc-ver2.difi.no/idporten-oidc-provider/
