--- a/nais/app/naiserator.yaml
+++ b/nais/app/naiserator.yaml
@@ -51,10 +51,9 @@ spec:
             value: "on"
   accessPolicy:
     outbound:
-      external:
-  {{#each external-host}}
-        - host: {{this}}
-  {{/each}}
+      rules:
+        - application: syfo-tilgangskontroll
+          namespace: teamsykefravr
     inbound:
       rules:
         - application: spinnsyn-frontend-arkivering
