--- a/nais/app/dev.yaml
+++ b/nais/app/dev.yaml
@@ -5,6 +5,8 @@ replicas_max: 2
 cpu: 300m
 memory: 600Mi
 env:
+  PDL_BASE_URL: https://pdl-api.dev-fss-pub.nais.io
+  PDL_API_AAD_CLIENT_ID: dev-fss.pdl.pdl-api
   SPRING_PROFILES_ACTIVE: default, testdata
   SYFOTILGANGSKONTROLL_URL: http://syfo-tilgangskontroll.teamsykefravr
   SYFOTILGANGSKONTROLL_AAD_CLIENT_ID: dev-gcp.teamsykefravr.syfo-tilgangskontroll
