--- a/nais/app/prod.yaml
+++ b/nais/app/prod.yaml
@@ -4,6 +4,8 @@ replicas_min: 2
 replicas_max: 3
 cpu: 600m
 memory: 800Mi
+external-host:
+  - pdl-api.prod-fss-pub.nais.io
 env:
   PDL_BASE_URL: https://pdl-api.prod-fss-pub.nais.io
   PDL_API_AAD_CLIENT_ID: prod-fss.pdl.pdl-api
