--- a/nais/app/dev.yaml
+++ b/nais/app/dev.yaml
@@ -4,7 +4,11 @@ replicas_min: 2
 replicas_max: 2
 cpu: 300m
 memory: 600Mi
+external-host:
+  - pdl-api.dev-fss-pub.nais.io
 env:
+  PDL_BASE_URL: https://pdl-api.dev-fss-pub.nais.io
+  PDL_API_AAD_CLIENT_ID: dev-fss.pdl.pdl-api
   SPRING_PROFILES_ACTIVE: default, testdata
   SYFOTILGANGSKONTROLL_URL: http://syfo-tilgangskontroll.teamsykefravr
   SYFOTILGANGSKONTROLL_AAD_CLIENT_ID: dev-gcp.teamsykefravr.syfo-tilgangskontroll
