--- a/nais/app/dev.yaml
+++ b/nais/app/dev.yaml
@@ -4,6 +4,7 @@ replicas_min: 2
 replicas_max: 2
 cpu: 300m
 memory: 600Mi
+flex-openapi-docs-ui: true
 external-host:
   - pdl-api.dev-fss-pub.nais.io
 env:
