Use new app istilgangskontroll
Ny app som erstatter syfo-tilgangskontroll, men med samme funksjonalitet.
Tilgang-objektet er endret og har nå feltet "erGodkjent" i stedet for "harTilgang". (Men det brukes vel ikke i denne appen.)

--- a/nais/app/naiserator.yaml
+++ b/nais/app/naiserator.yaml
@@ -54,7 +54,7 @@ spec:
   accessPolicy:
     outbound:
       rules:
-        - application: syfo-tilgangskontroll
+        - application: istilgangskontroll
           namespace: teamsykefravr
       external:
     {{#each external-host}}
