--- a/nais/app/dev.yaml
+++ b/nais/app/dev.yaml
@@ -11,8 +11,8 @@ env:
   PDL_BASE_URL: https://pdl-api.dev-fss-pub.nais.io
   PDL_API_AAD_CLIENT_ID: dev-fss.pdl.pdl-api
   SPRING_PROFILES_ACTIVE: default, testdata
-  SYFOTILGANGSKONTROLL_URL: http://syfo-tilgangskontroll.teamsykefravr
-  SYFOTILGANGSKONTROLL_AAD_CLIENT_ID: dev-gcp.teamsykefravr.syfo-tilgangskontroll
+  ISTILGANGSKONTROLL_URL: http://istilgangskontroll.teamsykefravr
+  ISTILGANGSKONTROLL_AAD_CLIENT_ID: dev-gcp.teamsykefravr.istilgangskontroll
   SPINNSYN_FRONTEND_CLIENT_ID: dev-gcp:flex:spinnsyn-frontend
   DITT_SYKEFRAVAER_CLIENT_ID: dev-gcp:flex:ditt-sykefravaer
   TOKENX_IDP_IDPORTEN: https://oidc-ver2.difi.no/idporten-oidc-provider/
