--- a/nais/app/prod.yaml
+++ b/nais/app/prod.yaml
@@ -9,8 +9,8 @@ external-host:
 env:
   PDL_BASE_URL: https://pdl-api.prod-fss-pub.nais.io
   PDL_API_AAD_CLIENT_ID: prod-fss.pdl.pdl-api
-  SYFOTILGANGSKONTROLL_URL: http://syfo-tilgangskontroll.teamsykefravr
-  SYFOTILGANGSKONTROLL_AAD_CLIENT_ID: prod-gcp.teamsykefravr.syfo-tilgangskontroll
+  ISTILGANGSKONTROLL_URL: http://istilgangskontroll.teamsykefravr
+  ISTILGANGSKONTROLL_AAD_CLIENT_ID: prod-gcp.teamsykefravr.istilgangskontroll
   SPINNSYN_FRONTEND_CLIENT_ID: prod-gcp:flex:spinnsyn-frontend
   DITT_SYKEFRAVAER_CLIENT_ID: prod-gcp:flex:ditt-sykefravaer
   TOKENX_IDP_IDPORTEN: https://oidc.difi.no/idporten-oidc-provider/
