--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,7 +32,7 @@ logging.config: "classpath:logback.xml"
 
 pdl.api.url: ${PDL_BASE_URL}
 
-syfo-tilgangskontroll.url: ${SYFOTILGANGSKONTROLL_URL}
+istilgangskontroll.url: ${ISTILGANGSKONTROLL_URL}
 nais.cluster: ${NAIS_CLUSTER_NAME}
 
 no.nav.security.jwt:
@@ -53,10 +53,10 @@ no.nav.security.jwt:
           client-id: ${AZURE_APP_CLIENT_ID}
           client-secret: ${AZURE_APP_CLIENT_SECRET}
           client-auth-method: client_secret_basic
-      onbehalfof-syfotilgangskontroll:
+      onbehalfof-istilgangskontroll:
         token-endpoint-url: ${AZURE_OPENID_CONFIG_TOKEN_ENDPOINT}
         grant-type: urn:ietf:params:oauth:grant-type:jwt-bearer
-        scope: api://${SYFOTILGANGSKONTROLL_AAD_CLIENT_ID}/.default
+        scope: api://${ISTILGANGSKONTROLL_AAD_CLIENT_ID}/.default
         authentication:
           client-id: ${AZURE_APP_CLIENT_ID}
           client-secret: ${AZURE_APP_CLIENT_SECRET}
