--- a/.github/workflows/topic.yml
+++ b/.github/workflows/topic.yml
@@ -13,7 +13,7 @@ jobs:
       id-token: write
     steps:
       - name: Checkout code
-        uses: actions/checkout@master
+        uses: actions/checkout@main
       - name: Deploy topic vedtak-status to dev-gcp
         uses: nais/deploy/actions/deploy@v2
         env:
@@ -29,7 +29,7 @@ jobs:
       id-token: write
     steps:
       - name: Checkout code
-        uses: actions/checkout@master
+        uses: actions/checkout@main
       - name: Deploy topic vedtak-status to prod-gcp
         uses: nais/deploy/actions/deploy@v2
         env:
