Splitt db_type i DEV og PROD

--- a/nais/app/naiserator.yaml
+++ b/nais/app/naiserator.yaml
@@ -37,7 +37,7 @@ spec:
       memory: {{memory}}
   gcp:
     sqlInstances:
-      - type: POSTGRES_11
+      - type: {{db_type}}
         tier: {{db_tier}}
         diskAutoresize: true
         databases:
