Bruk highAvailability i PROD

--- a/nais/app/naiserator.yaml
+++ b/nais/app/naiserator.yaml
@@ -39,6 +39,8 @@ spec:
     sqlInstances:
       - type: {{db_type}}
         tier: {{db_tier}}
+        highAvailability: {{db_highAvailability}}
+        pointInTimeRecovery: {{db_pointInTimeRecovery}}
         diskAutoresize: true
         databases:
           - name: spinnsyn-db
