--- a/nais/app/dev.yaml
+++ b/nais/app/dev.yaml
@@ -1,4 +1,6 @@
 db_tier: db-f1-micro
+db_highAvailability: true
+db_pointInTimeRecovery: true
 db_type: POSTGRES_14
 kafkaPool: nav-dev
 replicas_min: 2
