--- a/nais/app/prod.yaml
+++ b/nais/app/prod.yaml
@@ -1,4 +1,6 @@
 db_tier: db-custom-1-3840
+db_highAvailability: true
+db_pointInTimeRecovery: true
 db_type: POSTGRES_14
 kafkaPool: nav-prod
 replicas_min: 2
