Legger til team logs
Co-authored-by: Steinar Sørli Hegna <steinar.sorli.hegna@nav.no>

--- a/nais/app/naiserator.yaml
+++ b/nais/app/naiserator.yaml
@@ -68,6 +68,8 @@ spec:
       rules:
         - application: istilgangskontroll
           namespace: teamsykefravr
+        - application: logging
+          namespace: nais-system
       external:
     {{#each external-host}}
         - host: {{this}}
